add app logic